# py-web-13-2

./: .gitignore  README.md  docker-compose.yml  dockerfile  migrate_data.py  pyproject.toml
quotes/: forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_author_mongo_id_alter_author_born_date_and_more.py  0003_alter_author_mongo_id.py  0004_remove_quote_added_by_quote_mongo_id_and_more.py
quotes_site/: settings.py  urls.py
templates/quotes/: add_quote.html  quote_list.html  quotes_by_author.html  search_results.html
templates/registration/: login.html  password_reset_done.html  password_reset_form.html  signup.html
users/: urls.py  views.py
